# Projects

EMS/frontend/: package.json
EmployeeManagementSystem/: README.md  package-lock.json  package.json
EmployeeManagementSystem/backend/config/: db.php
EmployeeManagementSystem/backend/controllers/: AuthController.php  EmployeeController.php
EmployeeManagementSystem/frontend/: package-lock.json  vite.config.js
EmployeeManagementSystem/frontend/src/: App.jsx
EmployeeManagementSystem/frontend/src/models/: AddEmployee.jsx  EditEmployee.jsx  HRMangement.jsx
EmployeeManagementSystem/frontend/src/pages/: dasboard.jsx
Gen-AI Email Response System/: README.md  app.py  main.py  pyproject.toml  requirements.txt
Gen-AI Email Response System/data/: emails_dataset.csv  evaluation_results.csv
Gen-AI Email Response System/src/: evaluvator.py  generator.py
ML Dtaset app/: DatasetCard.tsx  api.ts  main.py  pyproject.toml
ML Dtaset app/src/components/: app.py
ML_Dataset_Explorer/: README.md
ML_Dataset_Explorer/backend/: main.py  package-lock.json  package.json  requirements.txt
ML_Dataset_Explorer/backend/src/: App.tsx
ML_Dataset_Explorer/backend/src/components/: StatsBar.tsx
ML_Dataset_Explorer/frontend/: index.html
ML_Dataset_Explorer/frontend/src/: api.ts  index.css  main.tsx
ML_Dataset_Explorer/frontend/src/components/: DatasetCard.tsx  DatasetForm.tsx
backend/: index.php
backend/controllers/: HolidayController.php
frontend/src/: main.jsx
frontend/src/pages/: HolidayCalendar.jsx  login.jsx
frontend/src/services/: api.js
(+1 files in other folders)
