[project]
name = "ml-dtaset-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.22.1",
    "axios>=0.4.0",
    "fastapi[all]>=0.136.3",
    "imagekitio>=5.6.0",
    "pandas>=3.0.3",
    "pydantic>=2.13.4",
    "react>=4.3.0",
    "sqlalchemy>=2.0.50",
    "tailwind>=3.1.5b0",
    "typescript>=0.0.12",
    "uvicorn>=0.49.0",
]
